crates/pg_syntax/tests/snapshots/postgres_regress/xmlmap@19.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT table_to_xml_and_xmlschema('testxmlschema.test1', true, false, '');"
---
SelectStmt@0..74
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..72
    FuncCall@7..72
      Ident@7..33 "table_to_xml_and_xmls ..."
      Ascii40@33..34 "("
      AConst@34..55
        Sconst@34..55 "'testxmlschema.test1'"
      Ascii44@55..56 ","
      Whitespace@56..57 " "
      AConst@57..61
        TrueP@57..61 "true"
      Ascii44@61..62 ","
      Whitespace@62..63 " "
      AConst@63..68
        FalseP@63..68 "false"
      Ascii44@68..69 ","
      Whitespace@69..70 " "
      AConst@70..72
        Sconst@70..72 "''"
  Ascii41@72..73 ")"
  Ascii59@73..74 ";"

