crates/pg_syntax/tests/snapshots/postgres_regress/xmlmap@2.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "CREATE TABLE testxmlschema.test1 (a int, b text);"
---
CreateStmt@0..49
  Create@0..6 "CREATE"
  Whitespace@6..7 " "
  Table@7..12 "TABLE"
  Whitespace@12..13 " "
  RangeVar@13..32
    Ident@13..26 "testxmlschema"
    Ascii46@26..27 "."
    Ident@27..32 "test1"
  Whitespace@32..33 " "
  Ascii40@33..34 "("
  ColumnDef@34..39
    Ident@34..35 "a"
    Whitespace@35..36 " "
    TypeName@36..39
      IntP@36..39 "int"
  Ascii44@39..40 ","
  Whitespace@40..41 " "
  ColumnDef@41..47
    Ident@41..42 "b"
    Whitespace@42..43 " "
    TypeName@43..47
      TextP@43..47 "text"
  Ascii41@47..48 ")"
  Ascii59@48..49 ";"

