crates/pg_syntax/tests/snapshots/postgres_regress/xmlmap@21.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT table_to_xml_and_xmlschema('testxmlschema.test1', true, true, 'foo');"
---
SelectStmt@0..76
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..74
    FuncCall@7..74
      Ident@7..33 "table_to_xml_and_xmls ..."
      Ascii40@33..34 "("
      AConst@34..55
        Sconst@34..55 "'testxmlschema.test1'"
      Ascii44@55..56 ","
      Whitespace@56..57 " "
      AConst@57..61
        TrueP@57..61 "true"
      Ascii44@61..62 ","
      Whitespace@62..63 " "
      AConst@63..67
        TrueP@63..67 "true"
      Ascii44@67..68 ","
      Whitespace@68..69 " "
      AConst@69..74
        Sconst@69..74 "'foo'"
  Ascii41@74..75 ")"
  Ascii59@75..76 ";"

