crates/pg_syntax/tests/snapshots/postgres_regress/xmlmap@22.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT query_to_xml('SELECT * FROM testxmlschema.test1', false, false, '');"
---
SelectStmt@0..75
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..73
    FuncCall@7..73
      Ident@7..19 "query_to_xml"
      Ascii40@19..20 "("
      AConst@20..55
        Sconst@20..55 "'SELECT * FROM testxm ..."
      Ascii44@55..56 ","
      Whitespace@56..57 " "
      AConst@57..62
        FalseP@57..62 "false"
      Ascii44@62..63 ","
      Whitespace@63..64 " "
      AConst@64..69
        FalseP@64..69 "false"
      Ascii44@69..70 ","
      Whitespace@70..71 " "
      AConst@71..73
        Sconst@71..73 "''"
  Ascii41@73..74 ")"
  Ascii59@74..75 ";"

