crates/pg_syntax/tests/snapshots/postgres_regress/xmlmap@23.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT query_to_xmlschema('SELECT * FROM testxmlschema.test1', false, false, '');"
---
SelectStmt@0..81
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..79
    FuncCall@7..79
      Ident@7..25 "query_to_xmlschema"
      Ascii40@25..26 "("
      AConst@26..61
        Sconst@26..61 "'SELECT * FROM testxm ..."
      Ascii44@61..62 ","
      Whitespace@62..63 " "
      AConst@63..68
        FalseP@63..68 "false"
      Ascii44@68..69 ","
      Whitespace@69..70 " "
      AConst@70..75
        FalseP@70..75 "false"
      Ascii44@75..76 ","
      Whitespace@76..77 " "
      AConst@77..79
        Sconst@77..79 "''"
  Ascii41@79..80 ")"
  Ascii59@80..81 ";"

