crates/pg_syntax/tests/snapshots/postgres_regress/xmlmap@26.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT cursor_to_xml('xc'::refcursor, 5, false, true, '');"
---
SelectStmt@0..58
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..56
    FuncCall@7..56
      Ident@7..20 "cursor_to_xml"
      Ascii40@20..21 "("
      TypeCast@21..36
        AConst@21..25
          Sconst@21..25 "'xc'"
        Typecast@25..27 "::"
        TypeName@27..36
          Ident@27..36 "refcursor"
      Ascii44@36..37 ","
      Whitespace@37..38 " "
      AConst@38..39
        Iconst@38..39 "5"
      Ascii44@39..40 ","
      Whitespace@40..41 " "
      AConst@41..46
        FalseP@41..46 "false"
      Ascii44@46..47 ","
      Whitespace@47..48 " "
      AConst@48..52
        TrueP@48..52 "true"
      Ascii44@52..53 ","
      Whitespace@53..54 " "
      AConst@54..56
        Sconst@54..56 "''"
  Ascii41@56..57 ")"
  Ascii59@57..58 ";"

