crates/pg_syntax/tests/snapshots/postgres_regress/xmlmap@29.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT cursor_to_xml('xc'::refcursor, 5, true, false, '');"
---
SelectStmt@0..58
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..56
    FuncCall@7..56
      Ident@7..20 "cursor_to_xml"
      Ascii40@20..21 "("
      TypeCast@21..36
        AConst@21..25
          Sconst@21..25 "'xc'"
        Typecast@25..27 "::"
        TypeName@27..36
          Ident@27..36 "refcursor"
      Ascii44@36..37 ","
      Whitespace@37..38 " "
      AConst@38..39
        Iconst@38..39 "5"
      Ascii44@39..40 ","
      Whitespace@40..41 " "
      AConst@41..45
        TrueP@41..45 "true"
      Ascii44@45..46 ","
      Whitespace@46..47 " "
      AConst@47..52
        FalseP@47..52 "false"
      Ascii44@52..53 ","
      Whitespace@53..54 " "
      AConst@54..56
        Sconst@54..56 "''"
  Ascii41@56..57 ")"
  Ascii59@57..58 ";"

